<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activity.SignActivity">

    <include
        layout="@layout/head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bc"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/username" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:background="@null"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bc"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/idcard" />
    <EditText
        android:id="@+id/idcard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/idcard"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingLeft="10dp"
        android:background="@null"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bc"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/phone" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:background="@null"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bc"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/yanzhengma" />

        <EditText
            android:layout_width="162dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/yanzhengma"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dip"
            android:hint="@string/getyzm"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bc"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/password" />
        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pwd"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:background="@null"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bc"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/password" />
        <EditText
            android:id="@+id/pwd1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pwd1"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:background="@null"
            />

    </LinearLayout>

        <Button
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/sign"
            android:textColorHint="@color/white"
            android:background="@color/sign"
            android:textSize="24sp" />

    <RadioButton
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/agree"
        android:textColorHint="@color/white"

        />






</LinearLayout>