<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetpwdActivity">
    <include
        layout="@layout/head"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intophone"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:textSize="19sp"
            android:textColor="@color/forgetpwd"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@null"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/forgetpwd"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intoyanzheng"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:textSize="19sp"
            android:textColor="@color/forgetpwd"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@null"/>

    </LinearLayout>
    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/forgetpwd"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intonpwd"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:textSize="19sp"
            android:textColor="@color/forgetpwd"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@null"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/forgetpwd"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surenpwd"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:textSize="19sp"
            android:textColor="@color/forgetpwd"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@null"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/forgetpwd"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />


    <Button

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/sure"
        android:textColorHint="@color/white"
        android:background="@color/sign"
        android:textSize="24sp" />

    <RadioButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/showpwd"
        android:textColorHint="@color/sign"

        />

</LinearLayout>